2014-01-03  Paul Eggert  <eggert@cs.ucla.edu>

	doc: use ASCII in .texi files where UTF-8 isn't needed
	* doc/posix-functions/crypt.texi, doc/posix-functions/encrypt.texi:
	* doc/posix-functions/setkey.texi, doc/regex.texi:
	Use ASCII input, not UTF-8.

2014-01-02  Jim Meyering  <meyering@fb.com>

	manywarnings: remove -Wmudflap
	* m4/manywarnings.m4 (gl_MANYWARN_ALL_GCC): Remove -Wmudflap, since
	it is no longer supported in gcc-4.9-to-be.

2014-01-01  Jim Meyering  <meyering@fb.com>

	maint: fix public-submodule-commit to work with newer git
	* top/maint.mk (public-submodule-commit): Remove excess quoting.
	We were over-quoting the test arguments, and somewhere prior to
	version 1.8.5.2.229, git stopped removing those excess quotes,
	which made the test fail, since the unexpanded strings would
	always differ; using GIT_TRACE=1 confirmed that the git merge-base
	command wasn't even being run.

2014-01-01  Paul Eggert  <eggert@cs.ucla.edu>

	doc: update main copyright year
	* doc/gnulib.texi: Update copyright date.

2014-01-01  Eric Blake  <eblake@redhat.com>

	version-etc: new year
	* lib/version-etc.c (COPYRIGHT_YEAR): Bump to 2014.
	* all files: run 'make update-copyright'

2013-12-24  Eric Blake  <eblake@redhat.com>

	passfd: give nicer error for recvfd at eof
	* lib/passfd.c (recvfd): Fake ENOTCONN if other end closes early.
	* tests/test-passfd.c (main): Enhance test to cover this.

2013-12-17  Paul Eggert  <eggert@cs.ucla.edu>

	gettimeofday: port recent C++ fix to Emacs
	Without this further patch, Emacs won't build due to
	the portcheck failing.  Also, this simplifies the patch a bit.
	* lib/time.in.h (localtime, gmtime): Don't replace unless
	GNULIB_GETTIMEOFDAY.  Treat them more like mktime.
	* lib/time.in.h (localtime, gmtime):
	* m4/gettimeofday.m4 (gl_GETTIMEOFDAY_REPLACE_LOCALTIME):
	* m4/time_h.m4 (gl_HEADER_TIME_H_DEFAULTS):
	* modules/time (time.h):
	Don't worry about about the possibility of localtime and gmtime